noinst_LTLIBRARIES = libopm.la

libopm_la_SOURCES = compat.c     \
                    compat.h     \
                    config.c     \
                    config.h     \
                    inet.c       \
                    inet.h       \
                    libopm.c     \
                    libopm.h     \
                    list.c       \
                    list.h       \
                    malloc.c     \
                    malloc.h     \
                    opm_common.h \
                    opm_error.h  \
                    opm.h        \
                    opm_types.h  \
                    proxy.c      \
                    proxy.h

libopm_la_LIBADD = @LTLIBOBJS@
