noinst_LTLIBRARIES = libopm.la

libopm_la_SOURCES = config.c     \
                    config.h     \
                    inet.h       \
                    libopm.c     \
                    libopm.h     \
                    list.c       \
                    list.h       \
                    memory.c     \
                    memory.h     \
                    opm_common.h \
                    opm_error.h  \
                    opm.h        \
                    opm_types.h  \
                    proxy.c      \
                    proxy.h

libopm_la_LIBADD = @LTLIBOBJS@
